// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package push.interface.v1;


option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Push {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  //`midware:"auth"`
  rpc PushUser(PushUserReq) returns (.google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/push/user"
    };
  };
}

message PushUserReq{
  int64 sender_id = 1;
  int64 receiver_id = 2 [(gogoproto.moretags) = 'form:"receiver_id" validate:"required"'];
  int32 send_seq = 3 [(gogoproto.moretags) = 'form:"send_seq" validate:"required"'];
  int32 msg_type = 4 [(gogoproto.moretags) = 'form:"msg_type" validate:"required"'];
  string content = 5 [(gogoproto.moretags) = 'form:"content" validate:"required"'];
}

message PushUserResp{
}
